# application-services

./: .buildconfig-android.yml
.circleci/: config.yml
components/fxa-client/: Cargo.toml
components/logins/: Cargo.toml
components/logins/android/src/main/java/mozilla/appservices/logins/: DatabaseLoginsStorage.kt
components/logins/ffi/: Cargo.toml
components/logins/ffi/src/: lib.rs
components/places/: Cargo.toml
components/places/android/src/main/java/mozilla/appservices/places/: PlacesConnection.kt
components/places/ffi/src/: lib.rs
components/places/src/import/: common.rs  fennec_bookmarks.rs  mod.rs
components/places/src/import/fennec/: history.rs
components/places/tests/: fennec_bookmarks.rs  fennec_bookmarks_schema.sql  fennec_history.rs  fennec_history_schema.sql  mod.rs
components/push/: Cargo.toml
components/push/ffi/: Cargo.toml
components/support/rc_crypto/: Cargo.toml
components/support/rc_crypto/src/: ece_crypto.rs
components/sync15/: Cargo.toml
components/sync15/src/: lib.rs
components/sync_manager/: Cargo.toml
components/sync_manager/src/: error.rs  lib.rs  manager.rs
components/sync_manager/src/clients/: engine.rs  mod.rs  record.rs  ser.rs
components/viaduct/: Cargo.toml
megazords/full/: Cargo.toml
megazords/full/src/: lib.rs
tools/: sync_bugzilla_to_github.py
