[package]
name = "sync_manager"
version = "0.1.0"
authors = ["application-services <application-services@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
sync15 = { path = "../sync15" }
sync-guid = { path = "../support/guid", features = ["random"] }
places = { path = "../places", optional = true }
logins = { path = "../logins", optional = true }
ffi-support = { path = "../support/ffi" }
failure = "0.1.5"
error-support = { path = "../support/error" }
prost = "0.5.0"
prost-derive = "0.5.0"
serde = "1.0.98"
serde_json = "1.0.40"
serde_derive = "1.0.98"
sql-support = { path = "../support/sql" }
bytes = "0.4.12"
lazy_static = "1.3.0"
log = "0.4.7"
interrupt = { path = "../support/interrupt" }

[build-dependencies]
prost-build = "0.5.0"
